--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
 <body>
     <div class="brand clearfix">
         <a href="index.html" class="logo"><img src="img/logo.png" class="img-responsive" alt=""></a>
-
-
     </div>
 
     <div class="ts-main-content">
@@ -88,7 +86,6 @@
 
                 <div class="row">
                     <div class="col-md-12">
-
                         <h2 class="page-title">Dashboard</h2>
 
                         <div class="row">
@@ -176,6 +173,7 @@
     <script src="js/fileinput.js"></script>
     <script src="js/chartData.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/app.js"></script>
 
     <script>
 
